<resources>
    <string name="app_name">PhotoOfTheDayNasa</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BottNavOne">About Mars</string>
    <string name="BottNavTwo">На экран 2</string>
    <string name="BottNavThree">Важное!</string>
    <string name="description">This lovely starfield spans some four full moons.</string>
    <string name="description_header">Two Clusters and a Comet</string>
    <string name="choose_theme">Let\'s choose an application theme ...</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="chips_today">Today</string>
    <string name="chip_yesterday">Yesterday</string>
    <string name="chip_before_yesterday">Day before yesterday</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="moon">Moon</string>
    <string name="photo_library">Photo Planets</string>
    <string name="mp_foto_curiosity">Фото из архива. В этот день Curiosity не сделал ни одного снимка</string>
    <string name="choose_theme_text">При изменении темы, изменится цвет акцентов и текста, а также форма кнопок</string>
    <string name="mars_description">​Mars is the fourth planet from the Sun – a dusty,
        cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons,
        polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
        The Latest from Mars  NASA Planetary Science Highlights: 2021
        Mars Resources Mars is one of the most explored bodies in our solar system,
        and it\'s the only planet where we\'ve sent rovers to roam the alien landscape.
        NASA currently has two rovers (Curiosity and Perseverance), one lander (InSight),
        and one helicopter (Ingenuity) exploring the surface of Mars.
        Perseverance rover – the largest, most advanced rover
        NASA has sent to another world – touched down on Mars on Feb. 18, 2021, after a
        203-day journey traversing 293 million miles (472 million kilometers). The Ingenuity
        helicopter rode to Mars attached to the belly of Perseverance.  Perseverance is one of
        three spacecraft that arrived at Mars in 2021. The Hope orbiter from the United Arab Emirates
        arrived on Feb. 9, 2021. China’s Tianwen-1 mission arrived on Feb. 10, 2021, and includes
        an orbiter, a lander, and a rover. Europa and India also have spacecraft studying Mars from orbit.
        In May 2021, China became the second nation to ever land successfully on Mars when its Zhurong Mars
        rover touched down.  An international fleet of eight orbiters is studying the Red Planet from
        above including three NASA orbiters: 2001 Mars Odyssey, Mars Reconnaissance Orbiter, and MAVEN.
        These robotic explorers have found lots of evidence that Mars was much wetter and warmer,
        with a thicker atmosphere, billions of years ago.</string>
    <string name="mars_header">Mars is the fourth planet from the Sun</string>
    <string name="main">Main</string>
    <string name="change_theme_button">Хочу сменить тему</string>
    <string name="button_info">Узнать изменения</string>
    <string name="choose_theme_info">Прежде чем менять тему, узнайте на что это повилияет...</string>
    <string name="todo">TODO</string>
    <string name="data">04/01/2022</string>
    <string name="buy">BUY</string>
    <string name="ToDoList">TODO List</string>
    <string name="list">List</string>
    <string name="typeItem">Тип заметки</string>
    <string name="value">Текст заметки</string>
    <string name="description_buy">здесь описание списка покупок и всего другого</string>
    <string name="fitch">Новый функционал</string>
    <string name="fitch_description">Теперь доступна новая тема с более веселыми тонами. Раскрасим мир вместе :)</string>


</resources>